# transient_grating_project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: README.md  api.rst  conf.py  index.rst  installation.rst  models.rst  quickstart.rst  usage.rst
docs/_static/: custom.css
external_files/: README.md  parameters_CoOx12.json
report/: .gitignore  README.md  main.tex  references.bib
src/: README.md  __init__.py  results_tg.ipynb  tg_analysis.py
