[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transient-grating-project"
version = "0.1.0"
description = "Transient grating signal analysis tools and notebook workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Manuel Fernando Sanchez Alarcon" }
]
dependencies = [
  "numpy>=2.3.5",
  "pandas>=3.0.1",
  "scipy>=1.16.3",
  "matplotlib>=3.10.7",
  "ipykernel>=7.1.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.3.0",
  "furo>=2024.8.6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
